# Projet-10

./: .dockerignore  MistralChat.py  README.md  architecture.puml  docker-compose.yml  dockerfile  indexer.py  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
evals/: evaluate_ragas.py
evals/datasets/: p10_eval_set_v1.jsonl
evals/experiments/comparisons/: all_diffs.csv  suspects.csv  top_degradations.csv  top_improvements.csv
evals/experiments/run_20260310_174303/: results.csv  summary.json  traces.jsonl
evals/experiments/run_20260310_174748/: results.csv  summary.json  traces.jsonl
evals/experiments/run_20260313_120745/: results.csv  summary.json  traces.jsonl
evals/experiments/run_20260313_144311/: results.csv  summary.json  traces.jsonl
evals/experiments/run_20260313_160107/: results.csv  summary.json  traces.jsonl
evals/experiments/run_20260313_170325/: results.csv  summary.json  traces.jsonl
evals/experiments/run_20260313_192701/: results.csv  summary.json  traces.jsonl
notebooks/: analyse_resultats_ragas.ipynb  comparaison_baselines_ragas.ipynb  comparaison_baselines_ragas_complet.ipynb
notebooks/comparison_exports/: all_runs_summary.csv  baseline1_vs_final.csv  baseline2_vs_final.csv
rag/: agent.py  observability.py  schemas.py  sql_db.py  sql_schemas.py  sql_tool.py
scripts/: check_sqlite_data.py  compare_eval_runs.py  ingest_excel_to_sqlite.py
tests/: test_sql_tool.py
utils/: config.py  data_loader.py  vector_store.py
vector_db/: document_chunks.pkl  faiss_index.idx
(+3 files in other folders)
